<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.search.SearchBar
            android:id="@+id/homeStopsSearchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/home_action_search_stops"
            app:menu="@menu/home_menu" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/homeContentLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/homeFavoriteStopsTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/home_favorite_stops_title"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall" />

                <TextView
                    android:id="@+id/homeFavoriteStopsNoFavoritesTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/home_favorite_stops_empty"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/homeFavoriteStopsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    tools:listitem="@layout/row_favorite_stop"
                    tools:itemCount="4" />

                <TextView
                    android:id="@+id/homeNoticesTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/home_notices_title"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/homeFavoriteStopsNoFavoritesTextView" />

                <TextView
                    android:id="@+id/homeNoticesInfoTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/home_notices_empty"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:visibility="gone" />

                <!-- TODO this isn't recycling, will fix it later -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/homeNoticesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/row_notice" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/homeSearchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/home_action_search_stops"
        android:transitionName="@string/row_home_search_view_transition_name"
        app:layout_anchor="@id/homeStopsSearchBar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeStopSuggestionsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_stop_suggestion" />

    </com.google.android.material.search.SearchView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>